# modelsentry

./: .gitignore  CLAUDE.md  LICENSE  MODELSENTRY.md  ModelSentry_Discovery_Script.md  ModelSentry_PRD_v1.docx  README.md  netlify.toml
.claude/: settings.json
.claude/agents/: security-checker.md  statistical-reviewer.md  test-writer.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
dashboard/: index.html
demos/: .env.example  README.md  demo.py  models.py  requirements.txt
docs/: beta-acceptance-email.md  beta-feedback-email.md
landing/: demo.html  index.html  success.html  waitlist.html
notebooks/: poc_validation.ipynb
sdk/: README.md  pyproject.toml
sdk/modelsentry/: __init__.py  alerts.py  cli.py  drift.py  monitor.py  profiler.py  server.py  storage.py
sdk/tests/: test_alerts.py  test_cli.py  test_drift.py  test_integration.py  test_monitor.py  test_profiler.py  test_server.py  test_storage.py
