[tool.poetry]
name = "modelsentry"
version = "0.1.0"
description = "Early warning when production ML models degrade"
authors = ["Trey Hamilton <treydavid32@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "modelsentry" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
pandas = "*"
scipy = "*"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
click = "^8.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
scikit-learn = "*"
httpx = "^0.28.1"

[tool.poetry.scripts]
modelsentry = "modelsentry.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
